# UniPPM

./: AdditionalData.cpp  AdditionalData.h  AncestryGraph.cpp  AncestryGraph.h  CMakeLists.txt  CNF.cpp  CNF.h  CNF.py  Callback.cpp  Callback.h  Input.cpp  Input.h  Likelihood.cpp  Likelihood.h  PPM2SAT.py  Parallel.cpp  Parallel.h  README.md  Rejection.cpp  Rejection.h  Solver.cpp  Solver.h  main-enumllh.cpp  main-freqs.cpp  main.cpp  main.py  result_trees.py  test.cpp
input/simulate/: n11_S109_k10_clustered.tsv  n11_S109_k1_clustered.tsv  n11_S109_k2_clustered.tsv  n11_S109_k5_clustered.tsv  n11_S115_k10_clustered.tsv  n11_S115_k1_clustered.tsv  n11_S115_k2_clustered.tsv  n11_S115_k5_clustered.tsv  n11_S129_k10_clustered.tsv  n11_S129_k1_clustered.tsv  n11_S129_k2_clustered.tsv  n11_S129_k5_clustered.tsv  n11_S139_k10_clustered.tsv  n11_S139_k1_clustered.tsv  n11_S139_k2_clustered.tsv  n11_S139_k5_clustered.tsv  n11_S24_k10_clustered.tsv  n11_S24_k1_clustered.tsv  n11_S24_k2_clustered.tsv  n11_S24_k5_clustered.tsv  n11_S27_k10_clustered.tsv  n11_S27_k1_clustered.tsv  n11_S27_k2_clustered.tsv  n11_S27_k5_clustered.tsv  n11_S35_k10_clustered.tsv  n11_S35_k1_clustered.tsv  n11_S35_k2_clustered.tsv  n11_S35_k5_clustered.tsv  n11_S69_k10_clustered.tsv  n11_S69_k1_clustered.tsv  n11_S69_k2_clustered.tsv  n11_S69_k5_clustered.tsv  n11_S83_k10_clustered.tsv  n11_S83_k1_clustered.tsv  n11_S83_k2_clustered.tsv  n11_S83_k5_clustered.tsv  n11_S89_k10_clustered.tsv  n11_S89_k1_clustered.tsv  n11_S89_k2_clustered.tsv  n11_S89_k5_clustered.tsv  (+192 more)
input/tracerx/: CRUK0001_reads.tsv  CRUK0002_reads.tsv  CRUK0003_reads.tsv  CRUK0004_reads.tsv  CRUK0005_reads.tsv  CRUK0006_reads.tsv  CRUK0007_reads.tsv  CRUK0008_reads.tsv  CRUK0009_reads.tsv  CRUK0010_reads.tsv  CRUK0011_reads.tsv  CRUK0012_reads.tsv  CRUK0013_reads.tsv  CRUK0014_reads.tsv  CRUK0015_reads.tsv  CRUK0016_reads.tsv  CRUK0017_reads.tsv  CRUK0018_reads.tsv  CRUK0019_reads.tsv  CRUK0020_reads.tsv  CRUK0021_reads.tsv  CRUK0022_reads.tsv  CRUK0023_reads.tsv  CRUK0024_reads.tsv  CRUK0025_reads.tsv  CRUK0026_reads.tsv  CRUK0027_reads.tsv  CRUK0028_reads.tsv  CRUK0029_reads.tsv  CRUK0030_reads.tsv  CRUK0031_reads.tsv  CRUK0032_reads.tsv  CRUK0033_reads.tsv  CRUK0034_reads.tsv  CRUK0035_reads.tsv  CRUK0036_reads.tsv  CRUK0037_reads.tsv  CRUK0038_reads.tsv  CRUK0039_reads.tsv  CRUK0040_reads.tsv  (+51 more)
src/: AncestryGraph.cpp  AncestryGraph.h  Hashing.cpp  Hashing.h  ILP.cpp  ILP.h  Input.cpp  Input.h  unippm.cpp
